--- a/assets/css/styleExterno.css
+++ b/assets/css/styleExterno.css
@@ -60,6 +60,10 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
 }
 
+p {
+  text-align: justify;
+}
+
 /*--------------------------------------------------------------
 # Disable AOS delay on mobile
 --------------------------------------------------------------*/
